po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-16 13:37+0000\n"
+"PO-Revision-Date: 2015-12-17 14:36+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -11698,7 +11698,7 @@ msgstr ""
 
 #: CRM/Utils/VersionCheck.php
 msgid "Update Available"
-msgstr ""
+msgstr "Uppdatering tillgänglig"
 
 #: CRM/Utils/Weight.php
 msgid "Move to top"
@@ -11718,7 +11718,7 @@ msgstr "Flytta till botten"
 
 #: js/Common.js
 msgid "Are you sure you want to continue?"
-msgstr ""
+msgstr "Är du säker på att du vill fortsätta?"
 
 #: js/crm.backbone.js
 msgid "Expected exactly one response"
@@ -11730,7 +11730,7 @@ msgstr ""
 
 #: js/model/crm.designer.js
 msgid "The field \"%1\" is already included."
-msgstr ""
+msgstr "Fältet \"%1\" är redan med."
 
 #: js/model/crm.designer.js templates/CRM/Contact/Page/DedupeFind.tpl
 msgid "Duplicate"
@@ -11742,7 +11742,7 @@ msgstr "Resultatkolumner?"
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Field.hlp
 msgid "Searchable"
-msgstr ""
+msgstr "Sökbar"
 
 #: js/model/crm.uf.js
 msgid "Entity Name"
@@ -11903,11 +11903,11 @@ msgstr "Laddar..."
 
 #: packages/HTML/QuickForm/date.php
 msgid "-day of week-"
-msgstr ""
+msgstr "-veckodag-"
 
 #: packages/HTML/QuickForm/date.php
 msgid "-day-"
-msgstr ""
+msgstr "-dag-"
 
 #: packages/HTML/QuickForm/date.php
 msgid "-month-"
@@ -11915,19 +11915,19 @@ msgstr "-månad-"
 
 #: packages/HTML/QuickForm/date.php
 msgid "-year-"
-msgstr ""
+msgstr "-år-"
 
 #: packages/HTML/QuickForm/date.php
 msgid "-hour-"
-msgstr ""
+msgstr "-timme-"
 
 #: packages/HTML/QuickForm/date.php
 msgid "-min-"
-msgstr ""
+msgstr "-minut-"
 
 #: packages/HTML/QuickForm/date.php
 msgid "-sec-"
-msgstr ""
+msgstr "-sekund-"
 
 #: templates/CRM/ACL/Form/ACL.tpl templates/CRM/ACL/Form/ACLBasic.tpl
 msgid "New ACL"
@@ -12785,7 +12785,7 @@ msgstr ""
 #: templates/CRM/Activity/Selector/Selector.tpl
 #: templates/CRM/Group/Form/Search.tpl
 msgid "Showing 0 to 0 of 0 entries"
-msgstr ""
+msgstr "Visar 0 till 0 av 0"
 
 #: templates/CRM/Activity/Selector/Selector.tpl
 #: templates/CRM/Group/Form/Search.tpl
@@ -12864,7 +12864,7 @@ msgstr "Detta alternativ är tänkt att användas av personer själva när de in
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Email Hold"
-msgstr ""
+msgstr "Epost pausad"
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid ""
@@ -12878,7 +12878,7 @@ msgstr "Den här flaggan används ofta för att markera e-postadresser till vilk
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Preferred Communication"
-msgstr ""
+msgstr "Föredraget kommunikationssätt"
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Select the preferred method(s) of communicating with this contact."
@@ -14829,7 +14829,7 @@ msgstr ""
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Duplicate Matching"
-msgstr ""
+msgstr "Hantering av duplikat"
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid ""
@@ -14860,7 +14860,7 @@ msgstr "<strong>Fyll i:</strong> Fyller endast i ytterligare information. Fält 
 msgid ""
 "<strong>No Duplicate Checking:</strong> Inserts all valid records without "
 "comparing them to existing contact records for possible duplicates."
-msgstr "<strong>Ingen duplikatskontroll</strong> Läs in alla korrekta poster UTAN att kontrollera dem mot existerande kontakter för duplikat."
+msgstr "<strong>Ingen duplikatskontroll:</strong> Läs in alla korrekta poster UTAN att kontrollera dem mot existerande kontakter för duplikat."
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid ""
@@ -14902,14 +14902,14 @@ msgstr ""
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid "Field Separator"
-msgstr ""
+msgstr "Fältseparator"
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid ""
 "Enter the character used to separate data columns in your import file. By default, the field\n"
 "  will populate with the separator defined in your global settings. Common values include a comma, semicolon,\n"
 "  or pipe character. To import a tab separated file, enter \"tab\" (without quotes) in the field."
-msgstr ""
+msgstr "Ange vilket tecken som används för att separera kolumner i importfilen. Som standard kommer fälten att separeras med det tecken som du angett i systeminställningarna. Vanliga värden är t.ex komma, semikolon eller '|' (pipe). Om fälten separeras med tabulatortecken, skriv \"tab\" (utan citattecknen) i fältet."
 
 #: templates/CRM/Contact/Import/Form/DataSource.tpl
 msgid ""
@@ -26483,7 +26483,7 @@ msgid ""
 "default, the field will populate with the separator defined in your global "
 "settings. Common values include a comma, semicolon, or pipe character. To "
 "import a tab separated file, enter \"tab\" (without quotes) in the field."
-msgstr ""
+msgstr "Ange vilket tecken som används för att separera kolumner i importfilen. Som standard kommer fälten att separeras med det tecken som du angett i systeminställningarna. Vanliga värden är t.ex komma, semikolon eller '|' (pipe). Om fälten separeras med tabulatortecken, skriv \"tab\" (utan citattecknen) i fältet."
 
 #: templates/CRM/Contact/Page/View/Note.tpl
 msgid "There are no Notes for this contact."
