--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Arnaud De Moyer <arnauddemoyer@gmail.com>, 2015
 # brouwser <brouwer@ee-atwork.nl>, 2013
 # brouwser <brouwer@ee-atwork.nl>, 2012
 # brouwser <brouwer@ee-atwork.nl>, 2012-2013
@@ -20,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-18 13:44+0000\n"
+"Last-Translator: Arnaud De Moyer <arnauddemoyer@gmail.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25853,11 +25854,11 @@ msgstr "Contact subtype %1 "
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group(s) %1 %2"
-msgstr ""
+msgstr "Groep(en) %1 %2"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group Status %1"
-msgstr ""
+msgstr "Groepstatus %1"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Greeting %1 %2"
@@ -25947,7 +25948,7 @@ msgstr ""
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Timestamp"
-msgstr ""
+msgstr "Tijdstempel"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Extended Data"
@@ -26274,7 +26275,7 @@ msgstr "wijzig berichtsjablonen"
 
 #: CRM/Core/Permission.php
 msgid "view my invoices"
-msgstr ""
+msgstr "bekijk mijn facturen"
 
 #: CRM/Core/Permission.php
 msgid "Allow users to view/ download their own invoices"
@@ -26427,7 +26428,7 @@ msgstr ""
 
 #: templates/CRM/Activity/Form/Activity.tpl
 msgid "Are you sure you want to delete "
-msgstr ""
+msgstr "Weet u zeker dat u dit wilt verwijderen"
 
 #: templates/CRM/Activity/Form/ActivityLinks.tpl
 msgid "New Activity"
