po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-17 14:36+0000\n"
+"PO-Revision-Date: 2015-12-18 12:09+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2153,7 +2153,7 @@ msgstr "Adressfält"
 #: CRM/Contact/Form/Search/Advanced.php CRM/Contact/Page/View/Summary.php
 #: CRM/Dedupe/Merger.php xml/templates/civicrm_data.tpl
 msgid "Notes"
-msgstr "Noteringar"
+msgstr "Anteckningar"
 
 #: CRM/Contact/BAO/Query.php CRM/Contact/Form/Search.php CRM/Dedupe/Merger.php
 #: xml/templates/civicrm_data.tpl
@@ -2826,16 +2826,16 @@ msgstr "Fortsätt"
 
 #: CRM/Contact/Form/DedupeRules.php CRM/Dedupe/DAO/RuleGroup.php
 msgid "Unsupervised"
-msgstr ""
+msgstr "Oövervakad"
 
 #: CRM/Contact/Form/DedupeRules.php CRM/Dedupe/DAO/RuleGroup.php
 msgid "Supervised"
-msgstr ""
+msgstr "Övervakad"
 
 #: CRM/Contact/Form/DedupeRules.php CRM/Dedupe/DAO/RuleGroup.php
 #: templates/CRM/Price/Page/Field.hlp
 msgid "General"
-msgstr ""
+msgstr "Generell"
 
 #: CRM/Contact/Form/DedupeRules.php
 msgid "Rule Name"
@@ -5241,7 +5241,7 @@ msgstr ""
 
 #: CRM/Contact/Page/View/Note.php
 msgid "Contact Notes"
-msgstr "Kontaktnoteringar"
+msgstr "Kontaktanteckningar"
 
 #: CRM/Contact/Page/View/Note.php CRM/Note/Form/Note.php
 msgid "You do not have access to this note."
@@ -5257,7 +5257,7 @@ msgstr "Är du säker på att du vill radera den här anteckningen?"
 
 #: CRM/Contact/Page/View/Note.php templates/CRM/Contact/Page/View/Note.tpl
 msgid "View Note"
-msgstr "Visa noteringar"
+msgstr "Visa anteckning"
 
 #: CRM/Contact/Page/View/Note.php templates/CRM/Contact/Page/View/Note.tpl
 msgid "Edit Note"
@@ -5686,7 +5686,7 @@ msgstr "Pengar"
 #: CRM/Custom/Form/Group.php templates/CRM/Contact/Form/Relationship.tpl
 #: templates/CRM/Contact/Page/View/Note.tpl
 msgid "Note"
-msgstr "Notering"
+msgstr "Anteckning"
 
 #: CRM/Core/BAO/CustomField.php
 msgid "Yes or No"
@@ -15360,7 +15360,7 @@ msgid ""
 "as needed. Click <strong>Edit Rule</strong> to review or modify the rules "
 "for each type of contact. You will generally want to maintain both "
 "'Supervised' and 'Unsupervised' rules for each contact type."
-msgstr ""
+msgstr "Hantera reglerna som används för att identifiera möjliga kontaktduplikat. Sök efter möjliga duplikat genom att välja en regel och sedan, om möjligt, slå samman kontakter. Klicka på <strong>Redigera regel</strong> för att granska och ändra reglerna för varje typ av kontakt. Du kommer antagligen att vilja ha både en 'Övervakad' och en 'Oövervakad' regel för varje kontakttyp."
 
 #: templates/CRM/Contact/Page/DedupeRules.hlp
 msgid ""
@@ -15369,7 +15369,7 @@ msgid ""
 "Membership, Contributions and Profile pages. They are also selected by "
 "default when you Import contacts. They are generally configured with a "
 "narrow definition of what constitutes a duplicate."
-msgstr ""
+msgstr "Den 'Oövervakade' regeln för varje kontakttyp används automatiskt när nya kontakter av den typen skapas via webbfunktioner, t.ex arrangemangsanmälningar, medlemskap och inbetalningar. Dom används också som standard när man importerar kontakter. De konfigureras normalt med en mycket precis definition av vad som är ett duplikat så att risken för falska duplikat minimeras."
 
 #: templates/CRM/Contact/Page/DedupeRules.hlp
 msgid ""
@@ -15377,7 +15377,7 @@ msgid ""
 "for possible duplicates when contacts are added or edited via the user "
 "interface. Supervised Rules should be configured with a broader definition "
 "of what constitutes a duplicate."
-msgstr ""
+msgstr "Den 'Övervakade' regeln för varje kontakttyp används automatiskt för att hitta möjliga duplikat när kontakter skapas eller redigeras via användargränssnittet. Övervakade regler kan därför vara mer generell i sin definition av vad som skulle kunna vara duplikat eftersom det finns en människa som kan agera på informationen."
 
 #: templates/CRM/Contact/Page/DedupeRules.hlp
 msgid ""
@@ -15402,7 +15402,7 @@ msgstr "Konfigurera upp till fem fält att utvärdera vid sökning efter misstä
 msgid ""
 "You can also set a <strong>Length</strong> value which determines how many "
 "characters in the field should be compared."
-msgstr ""
+msgstr "Du kan också ange ett värde för <strong>Längd</strong>. Det anger hur många tecken i fältet som skall jämföras."
 
 #: templates/CRM/Contact/Page/DedupeRules.hlp
 msgid ""
@@ -15410,7 +15410,7 @@ msgid ""
 "Ave.' would match '101 Delaplain St.' because the first 8 characters are the"
 " same. If Length is left blank, then the comparison is done on the entire "
 "field value."
-msgstr ""
+msgstr "EXEMPEL: Om du sätter längden till 9 på 'Gatuadress' så kommer 'Drottningbron' add matcha 'Drottninggatan' eftersom de 9 första tecknen är samma. Om längden är samma kommer jämförelsen att göras på hela fältet."
 
 #: templates/CRM/Contact/Page/DedupeRules.hlp
 msgid ""
@@ -15427,7 +15427,7 @@ msgid ""
 "You can only configure one 'Unsupervised' and one 'Supervised' rule for each"
 " contact type, but you can configure any number of additional 'General' "
 "rules to provide other criteria to scan for possible duplicates."
-msgstr ""
+msgstr "Du kan bara konfigurera en 'Oövervakad' och en 'Övervakad' regel för varje kontakttyp, men du kan ha hur många 'Generella' regler som helst för att manuellt söka via olika kriterier."
 
 #: templates/CRM/Contact/Page/DedupeRules.tpl
 msgid ""
@@ -24694,7 +24694,7 @@ msgstr "Välj en sparad fältmatching"
 
 #: CRM/Custom/Import/Parser/Api.php
 msgid "Missing required field(s) :"
-msgstr ""
+msgstr "Saknade obligatoriska fält :"
 
 #: CRM/Group/Form/Edit.php
 msgid "You do not have sufficient permission to delete this reserved group."
@@ -24708,7 +24708,7 @@ msgstr ""
 
 #: CRM/Group/Form/Edit.php
 msgid "select group"
-msgstr ""
+msgstr "välj grupp"
 
 #: CRM/Price/DAO/LineItem.php
 msgid "Line Item ID"
@@ -25056,11 +25056,11 @@ msgstr ""
 
 #: js/jquery/jquery.dashboard.js
 msgid "Collapse or expand"
-msgstr ""
+msgstr "Fäll ut eller ihop"
 
 #: js/jquery/jquery.dashboard.js
 msgid "View fullscreen"
-msgstr ""
+msgstr "Visa i fullskärm"
 
 #: js/jquery/jquery.dashboard.js
 msgid "Remove from dashboard"
@@ -25960,7 +25960,7 @@ msgstr ""
 
 #: CRM/Core/Form/Date.php
 msgid "Last 30 days"
-msgstr ""
+msgstr "Senaste 30 dagarna"
 
 #: CRM/Core/Form/Date.php
 msgid "Yesterday"
@@ -26037,11 +26037,11 @@ msgstr "Återkommer på"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "day of the month"
-msgstr ""
+msgstr "dag i månaden"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "day of the week"
-msgstr ""
+msgstr "dag i veckan"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Repeats by"
@@ -26049,15 +26049,15 @@ msgstr "Återkommer på"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Second"
-msgstr ""
+msgstr "Andra"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Third"
-msgstr ""
+msgstr "Tredje"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Fourth"
-msgstr ""
+msgstr "Fjärde"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "After"
@@ -26078,7 +26078,7 @@ msgstr "Uteslut datumen"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "This is a required field"
-msgstr ""
+msgstr "Detta är ett obligatoriskt fält"
 
 #: CRM/Core/Form/RecurringEntity.php
 msgid "Occurrences should be less than or equal to 30"
@@ -26200,7 +26200,7 @@ msgstr ""
 
 #: CRM/Core/Permission.php
 msgid "Create and edit rules, change the supervised and unsupervised rules"
-msgstr ""
+msgstr "Skapa och ändra regler, ändra vad som är övervakade och oövervakade regler för kontakttypen"
 
 #: CRM/Core/Permission.php
 msgid "Delete Contacts must also be granted in order for this to work."
@@ -26283,19 +26283,19 @@ msgstr "Nästa"
 
 #: CRM/Core/Resources.php
 msgid "Past 3 Months"
-msgstr ""
+msgstr "Senaste 3 månaderna"
 
 #: CRM/Core/Resources.php
 msgid "Past 6 Months"
-msgstr ""
+msgstr "Senaste 6 månaderna"
 
 #: CRM/Core/Resources.php
 msgid "Past Year"
-msgstr ""
+msgstr "Senaste året"
 
 #: CRM/Core/SelectValues.php
 msgid "Automatic"
-msgstr ""
+msgstr "Automatisk"
 
 #: CRM/Core/SelectValues.php
 msgid "Only send to email addresses assigned to the specified location"
@@ -26589,11 +26589,11 @@ msgstr ""
 
 #: templates/CRM/Core/Page/RecurringEntityPreview.tpl
 msgid "Start date"
-msgstr ""
+msgstr "Startdatum"
 
 #: templates/CRM/Core/Page/RecurringEntityPreview.tpl
 msgid "End date"
-msgstr ""
+msgstr "Slutdatum"
 
 #: templates/CRM/Core/Page/RecurringEntityPreview.tpl
 msgid "Original"
@@ -26675,15 +26675,15 @@ msgstr ""
 
 #: templates/CRM/Price/Page/LineItem.tpl
 msgid "Subtotal"
-msgstr ""
+msgstr "Delsumma"
 
 #: templates/CRM/Price/Page/LineItem.tpl
 msgid "Tax Rate"
-msgstr ""
+msgstr "Momssats"
 
 #: templates/CRM/Price/Page/LineItem.tpl
 msgid "Total Tax Amount"
-msgstr ""
+msgstr "Total moms"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -26773,11 +26773,11 @@ msgstr ""
 
 #: xml/templates/civicrm_data.tpl
 msgid "Pledge Payment"
-msgstr ""
+msgstr "Betalning mot utfästelse"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Contributions - Invoice"
-msgstr ""
+msgstr "Inbetalningar - Faktura"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Personal Campaign Pages - Owner Notification"
