--- a/po/sv_SE/grant.po
+++ b/po/sv_SE/grant.po
@@ -6,13 +6,13 @@
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Stefan Gagner <stefan@mei-ya.se>, 2013
-# Thomas Nilsson <thomas.nilsson@responsive.se>, 2012-2013
+# Thomas Nilsson <thomas.nilsson@responsive.se>, 2012-2013,2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-10-14 00:20+0000\n"
-"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
+"POT-Creation-Date: 2015-12-09 21:23-0500\n"
+"PO-Revision-Date: 2015-12-18 12:10+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -22,7 +22,7 @@ msgstr ""
 
 #: CRM/Grant/BAO/Grant.php
 msgid "Grant Note"
-msgstr "Anslagsnotering"
+msgstr "Anslagsanteckning"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Money Transfer Date is NULL"
