--- a/po/nl_NL/countries.po
+++ b/po/nl_NL/countries.po
@@ -3,6 +3,7 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Arnaud De Moyer <arnauddemoyer@gmail.com>, 2015
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
 # Johan Beckers <johan@carecompany.be>, 2013
 # Martin Niewzwaag <info@cmseasy.nl>, 2012
@@ -11,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-18 13:40+0000\n"
+"Last-Translator: Arnaud De Moyer <arnauddemoyer@gmail.com>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1042,8 +1043,8 @@ msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Saint Barthélemy"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Sint Maarten (Franse deel)"
