--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -23,6 +23,7 @@
 # LittleMissGeek <inactive+LittleMissGeek@transifex.com>, 2011
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Mathieu Lutfy <mathieu@bidon.ca>, 2011-2012,2014
+# Paul Caranton <caranton.paul@gmail.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -39,8 +40,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-20 18:59+0000\n"
+"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3348,7 +3349,7 @@ msgstr "Fiche contact"
 
 #: CRM/Contact/Form/Relationship.php
 msgid "You do not have permission to edit relationships for this contact."
-msgstr ""
+msgstr "Vous n'avez pas la permission de modifier les relations pour ce contact."
 
 #: CRM/Contact/Form/Relationship.php
 msgid "Relationships for"
@@ -5842,7 +5843,7 @@ msgstr "%1 doit être un site web valide."
 
 #: CRM/Core/BAO/CustomGroup.php
 msgid "Cannot create custom table because %1 is already a core table."
-msgstr ""
+msgstr "Impossible de créer une table personnalisée car %1 est déjà une table de base."
 
 #: CRM/Core/BAO/CustomGroup.php
 msgid "%1 Questions"
@@ -7853,17 +7854,17 @@ msgstr "La clé n'est pas indiquée pour cette passerelle de paiement"
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Subscription payment failed - %1"
-msgstr ""
+msgstr "Paiement de l'abonnement échoué - %1 "
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid ""
 "Recurring contribution appears to have been re-assigned from id %1 to %2, "
 "continuing with %2."
-msgstr ""
+msgstr "Des contributions récurrentes semblent avoir été réassignées de l'id %1 à %2, continuant avec %2."
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Could not find contributionRecur id: %1"
-msgstr ""
+msgstr "Impossible de trouver contributionRecur id: %1"
 
 #: CRM/Core/Payment/BaseIPN.php CRM/Core/Payment/GoogleIPN.php
 msgid "Online Contribution"
@@ -8255,11 +8256,11 @@ msgstr "eWAY Gateway URL non indiquée pour cette passerelle de paiement"
 
 #: CRM/Core/Payment.php
 msgid "No active instances of payment processor %1 were found."
-msgstr ""
+msgstr "Aucune instance active de service de paiement %1 n'a été trouvée."
 
 #: CRM/Core/Payment.php
 msgid "No active instances of payment processor '%1' were found."
-msgstr ""
+msgstr "Aucune instance active de service de paiement %1 n'a été trouvée."
 
 #: CRM/Core/Permission.php CRM/Logging/ReportDetail.php
 #: templates/CRM/common/joomla.tpl templates/CRM/common/print.tpl
@@ -11296,7 +11297,7 @@ msgstr "ceci est une interface, elle ne devrait pas être appelée directement."
 msgid ""
 "Timestamps reported by MySQL (eg \"%2\") and PHP (eg \"%3\" ) are "
 "mismatched.<br /><a href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "Horodate reporté par MySQL (ex \"%2\") et PHP (ex \"%3\") sont non concordantes.<br /><a href=\"%1\">En savoir plus à propos de cet avertissement</a>"
 
 #: CRM/Utils/Check/Env.php
 msgid "Environment Settings"
@@ -24939,7 +24940,7 @@ msgstr "Champ du profil"
 
 #: CRM/UF/Form/Field.php
 msgid "You have already added a primary location field of this type: %1"
-msgstr ""
+msgstr "Vous avez déjà ajouté un champ principal de lieu de ce type : %1"
 
 #: CRM/UF/Page/Group.php
 msgid "Use Profile-Listings Mode"
@@ -24949,7 +24950,7 @@ msgstr "Utiliser le mode de listes de profils"
 msgid ""
 "Case type \"%2\" has duplicate XML files (\"%3\" and \"%4\").<br /><a "
 "href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "Le type de dossier \"%2\" a des fichiers XML en double (\"%3\" et \"%4\").<br /><a href=\"%1\">En savoir plus sur cet avertissement</a>"
 
 #: CRM/Utils/Check/Case.php
 msgid "CiviCase"
@@ -24959,7 +24960,7 @@ msgstr "CiviCase"
 msgid ""
 "Case type \"%2\" corresponds to XML file (\"%3\") The XML file should be "
 "named \"%4\".<br /><a href=\"%1\">Read more about this warning</a>"
-msgstr ""
+msgstr "Le type de dossier \"%2\" correspond au fichier XML (\"%3\") Le fichier XML devrait être nommé \"%4\".<br /><a href=\"%1\">En savoir plus sur cet avertissement</a>"
 
 #: CRM/Utils/Check/Env.php
 msgid ""
@@ -25845,14 +25846,14 @@ msgstr[1] "%count activités supprimées."
 #: CRM/Activity/Form/Task/Delete.php
 msgid "1 could not be deleted."
 msgid_plural "%count could not be deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "1 n'a pas pu être supprimé."
+msgstr[1] "%count n'ont pas pu être supprimés."
 
 #: CRM/Activity/Form/Task/RemoveFromTag.php
 msgid "%count activity un-tagged"
 msgid_plural "%count activities un-tagged"
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count activité désétiquetée"
+msgstr[1] "%count activités désétiquetées"
 
 #: CRM/Activity/Page/AJAX.php CRM/Activity/Selector/Search.php
 msgid "Repeating (%1 of %2)"
