--- a/po/de_DE/member.po
+++ b/po/de_DE/member.po
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-21 12:14+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -173,7 +173,7 @@ msgstr "Später zahlen?"
 
 #: CRM/Member/BAO/Query.php
 msgid "Auto-Renew?"
-msgstr "Automatisch erneuern?"
+msgstr "Automatische Erneuerung?"
 
 #: CRM/Member/BAO/Query.php
 msgid "Membership is a Test?"
@@ -1862,7 +1862,7 @@ msgstr "(letzter Monat)"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid " (MTD)"
-msgstr "(Bis-Monat)"
+msgstr "(seit Monatsanfang)"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "(YTD)"
@@ -2367,7 +2367,7 @@ msgstr[1] ""
 msgid ""
 "Primary member counts (those who \"own\" the membership rather than "
 "receiving via relationship) are in [brackets]."
-msgstr ""
+msgstr "Die Anzahl primärer Mitglieder (solche, die die Mitgliedschaft nicht über eine Beziehung \"geerbt\" haben) sind in [eckigen Klammern]"
 
 #: templates/CRM/Member/Page/Tab.tpl
 msgid "Click <a %1>Add Membership</a> to record a new membership."
