--- a/po/de_DE/common-components.po
+++ b/po/de_DE/common-components.po
@@ -9,7 +9,7 @@
 # Danny Liebig <danny.liebig@hotmail.de>, 2012
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2012,2014
 # Ettore Atalan <atalanttore@googlemail.com>, 2015
-# Fabian <schuttenberg@systopia.de>, 2013-2014
+# Fabian <schuttenberg@systopia.de>, 2013-2015
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2015
 # Jo <jo@caj-augsburg.de>, 2012
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 12:44+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2015-12-21 10:47+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2194,7 +2194,7 @@ msgstr "Öffentliche Veranstaltung"
 #: templates/CRM/Admin/Page/EventTemplate.tpl
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Allow Online Registration"
-msgstr "Onlineregistrierung erlaubt"
+msgstr "Onlineregistrierung ermöglichen"
 
 #: CRM/Badge/Form/Layout.php CRM/Financial/DAO/PaymentToken.php
 msgid "Token"
