--- a/po/de_DE/menu.po
+++ b/po/de_DE/menu.po
@@ -11,7 +11,7 @@
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011-2012,2014
 # Bernhard Heß <dr.bernhard.hess@t-online.de>, 2012
 # Ettore Atalan <atalanttore@googlemail.com>, 2015
-# Fabian <schuttenberg@systopia.de>, 2013-2014
+# Fabian <schuttenberg@systopia.de>, 2013-2015
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # MichaSeidler <info@euroconsults.eu>, 2011, 2012
 # Joan Nguyen <doannt2909@gmail.com>, 2013
@@ -28,8 +28,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 12:43+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2015-12-21 11:05+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -673,7 +673,7 @@ msgstr "Multisite-Einstellungen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviEvent Component Settings"
-msgstr "CiviEvent Komponenteneinstellungen"
+msgstr "CiviEvent Einstellungen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
