po: update po/de_DE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -47,8 +47,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-14 11:32+0000\n"
-"Last-Translator: Detlev Sieber <detlev.sieber@foebud.org>\n"
+"PO-Revision-Date: 2015-12-21 13:43+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -7624,19 +7624,19 @@ msgstr "Vom Start bis zum heutigen Tag"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Year"
-msgstr ""
+msgstr "Ab dem Ende des Vorjahres"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Quarter"
-msgstr ""
+msgstr "Ab dem Ende des vorigen Quartals"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Month"
-msgstr ""
+msgstr "Ab dem Ende des vorigen Monats"
 
 #: CRM/Core/Form/Date.php
 msgid "From End of Previous Week"
-msgstr ""
+msgstr "Ab dem Ende der vorigen Woche"
 
 #: CRM/Core/Form/Date.php
 msgid "Current Year to-date"
@@ -9291,7 +9291,7 @@ msgstr "Der Anzeigestil sollte für diese Classe inline sein."
 
 #: CRM/Custom/Form/Group.php CRM/Price/Form/Set.php
 msgid "Set's Name should not start with digit"
-msgstr "Der Gruppenname darf nicht mit einer Ziffer beginnen."
+msgstr "Der Name des Schemas darf nicht mit einer Ziffer beginnen."
 
 #: CRM/Custom/Form/Group.php CRM/Price/Form/Set.php
 msgid "Set Name"
@@ -16938,7 +16938,7 @@ msgstr "Gruppen suchen"
 
 #: templates/CRM/Group/Form/Search.tpl
 msgid "Complete OR partial group name."
-msgstr "ganzer ODER teilweiser Gruppenname."
+msgstr "Vollständiger ODER Teil des Gruppennamens."
 
 #: templates/CRM/Group/Form/Search.tpl
 msgid "Complete OR partial creator name."
@@ -19194,7 +19194,7 @@ msgstr "Fall Status"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Participant Listing"
-msgstr "Teilnehmer/innen/liste"
+msgstr "Teilnehmendenliste"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Safe File Extension"
@@ -25238,7 +25238,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Search/Criteria/Location.tpl
 msgid "Range"
-msgstr ""
+msgstr "Bereich"
 
 #: templates/CRM/Contact/Form/Search/Custom/FullText.tpl
 msgid "Files"
@@ -25864,7 +25864,7 @@ msgstr[1] ""
 
 #: CRM/Activity/Page/AJAX.php CRM/Activity/Selector/Search.php
 msgid "Repeating (%1 of %2)"
-msgstr ""
+msgstr "Wiederholung (%1 von %2)"
 
 #: CRM/Contact/BAO/Query.php
 msgid "%1 is not a valid operator"
@@ -25880,7 +25880,7 @@ msgstr "Kontaktuntertyp %1 "
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group(s) %1 %2"
-msgstr ""
+msgstr "Gruppe(n) %1 %2"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group Status %1"
@@ -26349,7 +26349,7 @@ msgstr ""
 
 #: CRM/Core/SelectValues.php
 msgid "Non-deductible Amount"
-msgstr ""
+msgstr "Nicht absetzbarer Betrag"
 
 #: CRM/Core/SelectValues.php
 msgid "Not In"
@@ -26759,11 +26759,11 @@ msgstr "Heruntergeladene Rechnung."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Emailed Invoice"
-msgstr "Rechnung per EMail versandt"
+msgstr "Rechnung per E-Mail versandt"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Emailed Invoice."
-msgstr "Rechnung per EMail versandt."
+msgstr "Rechnung per E-Mail versandt."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Contact Merged"
