--- a/po/de_DE/event.po
+++ b/po/de_DE/event.po
@@ -30,8 +30,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-21 10:57+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3746,7 +3746,7 @@ msgstr "Die Veranstaltung ist ausgebucht."
 
 #: CRM/Event/BAO/Query.php
 msgid "Include Repeating Events"
-msgstr ""
+msgstr "Wiederholte Veranstaltungen einbeziehen"
 
 #: CRM/Event/BAO/Query.php
 msgid "Include participants from all events in the %1 series"
@@ -3758,7 +3758,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
-msgstr ""
+msgstr "Standard Teilnehmerrolle"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Status ID"
@@ -3934,7 +3934,7 @@ msgstr ""
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 msgid "Connected Repeating Events"
-msgstr ""
+msgstr "Verknüpfte wiederholte Veranstaltungen"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 msgid "Event Link"
@@ -3952,7 +3952,7 @@ msgstr ""
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Repeating Event"
-msgstr ""
+msgstr "Wiederholte Veranstalatung"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Child"
