--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -33,8 +33,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-21 11:05+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -5021,7 +5021,7 @@ msgstr "Bisher gibt es noch keine Auswahlmöglichkeiten für diese Optionengrupp
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid "Activity Types"
-msgstr ""
+msgstr "Aktivitätstypen"
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid ""
