po: update po/de_DE/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/contribute.po
+++ b/po/de_DE/contribute.po
@@ -25,8 +25,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 12:44+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2015-12-21 13:45+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3710,7 +3710,7 @@ msgstr "Zuwendungsstatus aktualisieren"
 
 #: templates/CRM/Contribute/Form/Task/Status.tpl
 msgid "Assign the selected status to all contributions listed below."
-msgstr ""
+msgstr "Den ausgewählten Status allen unten aufgelisteten Zuwendungen zuweisen."
 
 #: templates/CRM/Contribute/Form/Task.tpl
 msgid "Number of selected contributions: %1"
@@ -4834,11 +4834,11 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Refund Due"
-msgstr ""
+msgstr "Fälligkeit der Erstattung"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Refund Details"
-msgstr ""
+msgstr "Details zur Erstattung"
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "The date this payment was received."
@@ -4900,7 +4900,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid "Total amount of this contribution."
-msgstr ""
+msgstr "Gesamtbetrag dieser Zuwendung."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -5133,7 +5133,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/Form/AdditionalInfo.php
 msgid "Credit Note ID"
-msgstr ""
+msgstr "Gutschrift ID"
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid ""
@@ -5143,15 +5143,15 @@ msgstr ""
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "This Credit Note ID already exists in the database."
-msgstr ""
+msgstr "Diese Gutschrift ID existiert bereits in der Datenbank."
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Refund Amount"
-msgstr ""
+msgstr "Betrag der Erstattung"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 msgid "Refund Date"
-msgstr ""
+msgstr "Datum der Erstattung"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Payment Processor Error"
@@ -5176,8 +5176,8 @@ msgstr ""
 #: CRM/Contribute/Form/Task/Delete.php
 msgid "%count contribution deleted."
 msgid_plural "%count contributions deleted."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "%count Zuwendung gelöscht."
+msgstr[1] "%count Zuwendungen gelöscht."
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid ""
@@ -5191,7 +5191,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "Print Contribution Invoice"
-msgstr ""
+msgstr "Rechnung für Zuwendung drucken"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "PDF Invoice"
@@ -5240,7 +5240,7 @@ msgstr ""
 
 #: CRM/Contribute/Info.php
 msgid "edit contributions"
-msgstr ""
+msgstr "Zuwendungen bearbeiten"
 
 #: CRM/Contribute/Info.php
 msgid "Record and update contributions"
@@ -5264,7 +5264,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Form/AdditionalInfo/AdditionalDetail.tpl
 msgid "Unique internal Credit Note ID for this contribution."
-msgstr ""
+msgstr "Eindeutige interne Gutschrift ID für diese Zuwendung."
 
 #: templates/CRM/Contribute/Form/Contribution.tpl
 msgid ""
