--- a/po/de_DE/drupal-civicrm.po
+++ b/po/de_DE/drupal-civicrm.po
@@ -5,7 +5,7 @@
 # Translators:
 # translatosaurus <accounts@drexler.eu>, 2012
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
-# Fabian <schuttenberg@systopia.de>, 2013-2014
+# Fabian <schuttenberg@systopia.de>, 2013-2015
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
 # Jens-Erik Weber <JensErikWeber@gmail.com>, 2014
 # Martin Peth <peth@systopia.de>, 2014-2015
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2015-11-25 09:14+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
+"PO-Revision-Date: 2015-12-21 09:45+0000\n"
+"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2461,7 +2461,7 @@ msgstr "Auch nach einem Knoten suchen und den Autor bzw. die Autorin des Knotens
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_activity.inc
 msgid "Activity type"
-msgstr ""
+msgstr "Aktivitätstyp"
 
 #: drupal/modules/civicrm_cck/civicrm_cck.module
 msgid "Contacts"
