--- a/po/fr_FR/campaign.po
+++ b/po/fr_FR/campaign.po
@@ -4,6 +4,7 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
+# Peter <webmaster@lebouclier.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Philippe SAMPONT <PhilippeS@cncd.be>, 2015
 # tonthon <tonthon21@gmail.com>, 2011
@@ -13,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-21 20:51+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +25,7 @@ msgstr ""
 
 #: CRM/Campaign/BAO/Campaign.php
 msgid "Current Campaigns"
-msgstr "Campagnes Actuelles"
+msgstr "Campagnes actuelles"
 
 #: CRM/Campaign/BAO/Campaign.php
 msgid "Past Campaigns"
@@ -106,7 +107,7 @@ msgstr ""
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Is Campaign Active?"
-msgstr ""
+msgstr "Est-ce que la campagne est active ?"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Created By"
@@ -118,7 +119,7 @@ msgstr "Date de création"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified By"
-msgstr ""
+msgstr "Campagne modifiée par"
 
 #: CRM/Campaign/DAO/Campaign.php
 msgid "Campaign Modified Date"
@@ -398,7 +399,7 @@ msgstr "Informations principales"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php
 msgid "Results"
-msgstr ""
+msgstr "Résultats"
 
 #: CRM/Campaign/Form/Survey.php
 msgid "Configure Survey - %1"
