po: update po/fr_FR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -11,6 +11,7 @@
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
 # Nicolas GAILLARD <ngaillard.vosges@gmail.com>, 2015
+# Paul Caranton <caranton.paul@gmail.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Vincent Lucy <vincent.lucy@gmail.com>, 2014
@@ -21,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-21 20:39+0000\n"
+"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1981,7 +1982,7 @@ msgstr "Vous n'êtes pas autorisé à ré-initialiser ce modèle."
 
 #: CRM/Admin/Page/MessageTemplates.php
 msgid "Message Template"
-msgstr ""
+msgstr "Modèle de Message"
 
 #: CRM/Admin/Page/OptionGroup.php templates/CRM/Admin/Page/OptionGroup.tpl
 msgid "View and Edit Options"
@@ -3794,7 +3795,7 @@ msgid ""
 "    <p>If you do not want users to send outbound mail from CiviCRM, select \"Disable Outbound Email\". NOTE: If you disable outbound email, and you are using Online Contribution pages or online Event Registration - you will need to disable automated receipts and registration confirmations.</p>\n"
 "\n"
 "   <p>If you choose Redirect to Database, all emails will be recorded as archived mailings instead of being sent out.</p>"
-msgstr ""
+msgstr "<p>CiviCRM offre plusieurs options pour envoyer les courriels. L'option par défaut fonctionne bien sur les systèmes d'exploitation Linux. Si vous êtes sous Windows, entrez les paramètres de votre serveur SMTP/Sendmail. Vous pouvez vérifier que votre configuration fonctionne en cliquant sur \"Sauvegarder et envoyer le courriel de test\". Si vous n'êtes pas sûr de ce que vous devez saisir, vérifiez auprès de votre administrateur système, de votre fournisseur d'accès Internet ou de votre hébergeur.</p>\n\n<p> Si vous ne voulez pas que vos utilisateurs envoient des courriels depuis CiviCRM, sélectionnez \"Désactiver l'envoi de courriels\". NOTE: Si vous désactivez l'envoi de courriels et que vous utilisez des pages de contribution ou d'inscription à des événements en ligne, vous devrez alors désactiver l'envoi automatique d'accusé de réception et de confirmation d'inscription.</p>\n\n<p>Si vous choisissez la redirection vers la base de données, tous les courriels seront archivés au lieu d'être envoyés.</p>"
 
 #: templates/CRM/Admin/Form/Setting/Smtp.tpl
 msgid "SMTP Configuration"
@@ -4006,7 +4007,7 @@ msgid ""
 "For small to medium sized modifications, use your css file to override some "
 "of the styles in civicrm.css. Or if you need to make drastic changes, you "
 "can choose to disable civicrm.css completely."
-msgstr ""
+msgstr "Vous pouvez modifier l'apparence de CiviCRM en ajoutant vos propres feuilles de style. Pour de petites ou moyennes modifications, utilisez votre fichier CSS pour écraser quelques uns des styles de civicrm.css. Si vous devez faire des modifications majeures, vous pouvez choisir de désactiver civicrm.css complètement."
 
 #: templates/CRM/Admin/Form/Setting/Url.tpl
 msgid ""
@@ -4203,7 +4204,7 @@ msgid ""
 "and build the community. If you have a technical role for this site, be sure"
 " to check \"Keep in Touch\" to receive technical updates (a low volume "
 "mailing list)."
-msgstr ""
+msgstr "Avez-vous enregistré votre site sur CiviCRM.org ? Si non, merci de prendre quelques minutes pour <a href=\"%1\" target=\"_blank\">remplir le formulaire d'enregistrement</a> et nous aider à renforcer l'écosystème CiviCRM. L'information collectée nous aidera à prioriser les améliorations, mieux cibler notre communication et construire la communauté. Si vous avez un rôle technique pour ce site, assurez-vous de cocher la case pour recevoir les informations techniques (liste de diffusion à faible trafic)."
 
 #: templates/CRM/Admin/Page/Admin.tpl
 msgid "plus sign"
@@ -4689,7 +4690,7 @@ msgstr "(documentation sur les paramètres et la syntaxe de commande des tâches
 msgid ""
 "This screen presents the list of most recent 1,000 scheduled jobs log "
 "entries."
-msgstr ""
+msgstr "Cette page présente la liste des 1000 plus récentes entrées dans le journal pour les tâches périodiques."
 
 #: templates/CRM/Admin/Page/JobLog.tpl
 msgid "List of log entries for:"
@@ -4866,7 +4867,7 @@ msgstr "Les modèles de message prédéfinis sont utilisés par le système pour
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Workflow"
-msgstr ""
+msgstr "Processus"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "Add Message Template"
@@ -5009,7 +5010,7 @@ msgstr "Il n'y a pas de choix configuré dans cette liste. Vous pouvez en <a hre
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid "Activity Types"
-msgstr ""
+msgstr "Types d'activité"
 
 #: templates/CRM/Admin/Page/Options.hlp
 msgid ""
@@ -5806,7 +5807,7 @@ msgid ""
 "perspective of each of the two entities (e.g. Parent &gt;-&lt; Child, "
 "Employer &gt;-&lt; Employee). For some types of relationships, the labels "
 "may be the same in both directions (e.g. Spouse &gt;-&lt; Spouse)."
-msgstr ""
+msgstr "Les types de relation décrivent les relations entre les personnes, foyers et organisations. Leurs libellés décrivent la relation du point de vue de chacune des deux entités (par exemple parent  &gt;-&lt; enfant, employeur &gt;-&lt; employé). Pour certains types de relation, les libellés peuvent être identiques dans les deux directions (par exemple conjoint &gt;-&lt; conjoint)."
 
 #: templates/CRM/Admin/Page/RelationshipType.tpl
 msgid ""
@@ -5994,7 +5995,7 @@ msgstr "Compte de courriel"
 
 #: CRM/Admin/Form/Mapping.php
 msgid "Field Mapping"
-msgstr ""
+msgstr "Correspondance de Champs"
 
 #: CRM/Admin/Form/Options.php
 msgid "%1 Option"
@@ -6002,7 +6003,7 @@ msgstr "Option %1"
 
 #: CRM/Admin/Form/Options.php
 msgid "Contacts AND Cases"
-msgstr ""
+msgstr "Contacts et dossiers"
 
 #: CRM/Admin/Form/ParticipantStatus.php
 msgid "Positive"
@@ -6021,7 +6022,7 @@ msgid ""
 "You have enabled the County option. Please ensure you populate the county "
 "table in your CiviCRM Database. You can find extensions to populate counties"
 " in the <a %1>CiviCRM Extensions Directory</a>."
-msgstr ""
+msgstr "Vous avez activé l'option sur les comtés. Veuillez peupler la table des comtés dans votre base de données CiviCRM. Vous pouvez trouver les extensions pour peupler les comtés dans le <a %1>Répertoire des extensions CiviCRM</a>."
 
 #: CRM/Admin/Form/Preferences/Address.php
 msgid "Populate counties"
