--- a/po/fr_FR/event.po
+++ b/po/fr_FR/event.po
@@ -9,6 +9,7 @@
 # Christophe BENZ <christophe.benz@gmail.com>, 2011
 # fr rev <e2ffr02@hotmail.com>, 2015
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
+# Paul Caranton <caranton.paul@gmail.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # reda <redasadki@gmail.com>, 2011
@@ -17,8 +18,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-21 12:41+0000\n"
+"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1679,7 +1680,7 @@ msgstr "Ce titre est ce que voient les utilisateurs quand ils choisissent un mod
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid "Template"
-msgstr ""
+msgstr "Modèle"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 msgid ""
@@ -3745,7 +3746,7 @@ msgstr "Terminer la transaction"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
-msgstr ""
+msgstr "Identifiant de Role par défaut"
 
 #: CRM/Event/DAO/Participant.php
 msgid "Participant Status ID"
@@ -3861,13 +3862,13 @@ msgstr "Supprimer les participants et les événements modifiables"
 
 #: CRM/Event/Info.php
 msgid "manage event profiles"
-msgstr ""
+msgstr "gestion des profils d'événements"
 
 #: CRM/Event/Info.php
 msgid ""
 "Allow users to create, edit and copy event-related profile forms used for "
 "online event registration."
-msgstr ""
+msgstr "Autoriser les utilisateurs à créer, modifier et copier les formulaires de profils des événements utilisés pour l'enregistrement d'événements en ligne."
 
 #: templates/CRM/Event/Form/ManageEvent/ConfirmRepeatMode.tpl
 msgid "How should this change affect others in the series?"
@@ -3935,7 +3936,7 @@ msgstr "Taxe total"
 msgid ""
 "NOTE: Contacts selected on the search results are not relevant here; all "
 "contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "NOTE : Les contacts sélectionnés dans les résultats de recherche ne sont pas pertinents ici; tous les contacts qui correspondent aux critère suivant seront intégrés dans le groupe."
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Repeating Event"
@@ -3948,7 +3949,7 @@ msgstr "Enfant"
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 #: xml/templates/message_templates/event_online_receipt_text.tpl
 msgid "Participant Total"
-msgstr ""
+msgstr "Total des Participants"
 
 #: xml/templates/message_templates/event_online_receipt_html.tpl
 msgid " Amount Before Tax: "
