--- a/po/fr_FR/pledge.po
+++ b/po/fr_FR/pledge.po
@@ -6,6 +6,7 @@
 # LittleMissGeek <inactive+LittleMissGeek@transifex.com>, 2011
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
+# Paul Caranton <caranton.paul@gmail.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Virginie Ganivet <virginie@cividesk.com>, 2015
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-21 13:01+0000\n"
+"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -850,11 +851,11 @@ msgstr "Cliquer sur <a %1> Ajouter une promesse de don</a> pour enregistrer une 
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Contact ID %1 %2"
-msgstr ""
+msgstr "Identifiant de contact %1 %2"
 
 #: CRM/Pledge/Form/Search.php
 msgid "Pledger Name"
-msgstr ""
+msgstr "Nom de la personne faisant l'engagement de don"
 
 #: CRM/Pledge/Form/Task/Delete.php
 msgid "%count pledge deleted."
