--- a/po/fr_FR/countries.po
+++ b/po/fr_FR/countries.po
@@ -5,14 +5,15 @@
 # Translators:
 # SR71 <ben.alard@gmail.com>, 2012
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2012
+# Paul Caranton <caranton.paul@gmail.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-21 12:13+0000\n"
+"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1042,8 +1043,8 @@ msgstr "Kosovo"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "Saint Barthélémy"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "Saint-Martin (partie Française)"
