--- a/po/sv_SE/mailing.po
+++ b/po/sv_SE/mailing.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:31+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-21 10:34+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1589,7 +1589,7 @@ msgstr ""
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Is Test?"
-msgstr ""
+msgstr "Utskicket är ett testutskick?"
 
 #: CRM/Mailing/DAO/MailingJob.php
 msgid "Mailing Job Type"
@@ -2007,13 +2007,13 @@ msgstr "Det är en bra idé att verifiera ditt utskick genom att skicka det till
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid "Things to check in a test mailing:"
-msgstr ""
+msgstr "Saker att kolla i ett testutskick:"
 
 #: templates/CRM/Mailing/MailingUI.hlp
 msgid ""
 "Verify the content and formatting looks consistent across various email "
 "clients."
-msgstr ""
+msgstr "Kontrollera att innehåll och formatering är konsekvent i olika mailläsare."
 
 #: templates/CRM/Mailing/Page/Browse.hlp
 msgid "Archived"
