po: update po/sv_SE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-18 12:09+0000\n"
+"PO-Revision-Date: 2015-12-21 09:26+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -13398,7 +13398,7 @@ msgstr "Lägg till ytterligare en direktmeddelande-identitet"
 msgid ""
 "If the person you were trying to add is listed below, click their name to "
 "view or edit their record"
-msgstr ""
+msgstr "Om personen du tänkte lägga till är med i listan nedan, klicka på namnet för att visa eller redigera deras information."
 
 #: templates/CRM/Contact/Form/Edit/Individual.tpl
 msgid "Similar Contact Found"
@@ -13406,7 +13406,7 @@ msgstr ""
 
 #: templates/CRM/Contact/Form/Edit/Individual.tpl
 msgid "Similar Contacts Found"
-msgstr ""
+msgstr "Liknande kontakter hittades"
 
 #: templates/CRM/Contact/Form/Edit/Lock.tpl
 #: templates/CRM/Contact/Page/View/Summary.tpl
