--- a/po/fr_FR/install.po
+++ b/po/fr_FR/install.po
@@ -8,15 +8,16 @@
 # Caroline Servissolle <cservissolle13207@gmail.com>, 2015
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # Mathieu Lutfy <mathieu@bidon.ca>, 2014-2015
+# Peter <webmaster@lebouclier.com>, 2015
 # Vincent Hammadache <vhammadache@gmail.com>, 2015
 # Vincent <vincent.primault@gmail.com>, 2014
 # Xynn <xynn.anhnguyen@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:58-0400\n"
-"PO-Revision-Date: 2015-10-30 20:52+0000\n"
-"Last-Translator: Xynn <xynn.anhnguyen@gmail.com>\n"
+"POT-Creation-Date: 2015-12-09 21:24-0500\n"
+"PO-Revision-Date: 2015-12-21 20:50+0000\n"
+"Last-Translator: Peter <webmaster@lebouclier.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -340,7 +341,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Could not create a table in the database."
-msgstr ""
+msgstr "N'a pas pu créer une table dans la base de données"
 
 #: install/index.php
 msgid "Could not create a database trigger."
@@ -348,7 +349,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Could not connect to the database server."
-msgstr ""
+msgstr "N'a pas pu se connecter au serveur de la base de données"
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
