--- a/po/fr_FR/report.po
+++ b/po/fr_FR/report.po
@@ -7,6 +7,7 @@
 # ERELOSInfo <erelosinfo@gmail.com>, 2014
 # F Boot <f2boot@gmail.com>, 2012
 # Camille Baldock <mademoisellegeek42@gmail.com>, 2011
+# Paul Caranton <caranton.paul@gmail.com>, 2015
 # Philippe Bégou <philippe.begou@gmail.com>, 2012-2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # tonthon <tonthon21@gmail.com>, 2011
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2015-12-21 13:13+0000\n"
+"Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1206,7 +1207,7 @@ msgstr "Cliques: %1"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Opt-out"
-msgstr ""
+msgstr "Exclusion des envois de mails"
 
 #: CRM/Report/Form/Mailing/Detail.php
 msgid "Unsubscribed"
@@ -2091,20 +2092,20 @@ msgstr "Le nombre par défaut du nombre de rangées par page pour la plupart des
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Created By"
-msgstr ""
+msgstr "Compte Rendu Créé Par"
 
 #: CRM/Report/DAO/ReportInstance.php
 msgid "Report Instance Owned By"
-msgstr ""
+msgstr "Compte Rendu Appartenant À"
 
 #: CRM/Report/Form/Activity.php
 msgid "Include Case Activities"
-msgstr ""
+msgstr "Inclure les Activités du Dossier"
 
 #: CRM/Report/Form/Activity.php
 msgid ""
 "Please enable 'Include Case Activities' to filter with Case Activity types."
-msgstr ""
+msgstr "Merci d'activer \"Inclure les Activités du Dossier\" pour filtrer avec les types d'Activités de Dossiers."
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Subtype (Contact A)"
@@ -2163,7 +2164,7 @@ msgstr "Moyenne des contributions"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "Premium Fulfilled Date"
-msgstr ""
+msgstr "Date d'Adhésion au Premium"
 
 #: CRM/Report/Form.php
 msgid "Columns"
@@ -2183,31 +2184,31 @@ msgstr "Trier"
 
 #: CRM/Report/Form.php
 msgid "Contact Prefix"
-msgstr ""
+msgstr "Prefix du Contact"
 
 #: CRM/Report/Form.php
 msgid "Nick Name"
-msgstr ""
+msgstr "Surnom"
 
 #: CRM/Report/Form.php
 msgid "Contact Suffix"
-msgstr ""
+msgstr "Suffix du Contact"
 
 #: CRM/Report/Form.php
 msgid "Address Greeting"
-msgstr ""
+msgstr "Formule de salutation par courrier"
 
 #: CRM/Report/Form.php
 msgid "Contact Job title"
-msgstr ""
+msgstr "Nom de Poste du Contact"
 
 #: CRM/Report/Form.php
 msgid "Contact identifier from external system"
-msgstr ""
+msgstr "Identifiant du contact provenant d'un système externe"
 
 #: CRM/Report/Form.php
 msgid "%1 for this %2."
-msgstr ""
+msgstr "%1 pour ce %2."
 
 #: CRM/Report/Info.php
 msgid "access CiviReport"
@@ -2243,7 +2244,7 @@ msgstr "Gérer les modèles de compte rendu"
 
 #: CRM/Report/Page/Report.php
 msgid "%1 - Template"
-msgstr ""
+msgstr "%1 - Modèle"
 
 #: templates/CRM/Report/Form/Fields.tpl
 msgid "Title and Format"
