po: update po/fr_FR/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/common-base.po
+++ b/po/fr_FR/common-base.po
@@ -40,7 +40,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-20 18:59+0000\n"
+"PO-Revision-Date: 2015-12-21 12:07+0000\n"
 "Last-Translator: Paul Caranton <caranton.paul@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -25861,7 +25861,7 @@ msgstr "Répétition (%1 sur %2)"
 
 #: CRM/Contact/BAO/Query.php
 msgid "%1 is not a valid operator"
-msgstr ""
+msgstr "%1 n'est pas un opérateur valide"
 
 #: CRM/Contact/BAO/Query.php CRM/Core/SelectValues.php
 msgid "Not Like"
@@ -25873,11 +25873,11 @@ msgstr "Sous-type de contact %1"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group(s) %1 %2"
-msgstr ""
+msgstr "Groupe(s) %1 %2"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Group Status %1"
-msgstr ""
+msgstr "État du Groupe %1"
 
 #: CRM/Contact/BAO/Query.php
 msgid "Greeting %1 %2"
@@ -25920,8 +25920,8 @@ msgstr "ID du participant"
 #: CRM/Contact/Form/Task/Batch.php
 msgid "Contact Subtype field of 1 contact has not been updated."
 msgid_plural "Contact Subtype field of %count contacts has not been updated."
-msgstr[0] ""
-msgstr[1] ""
+msgstr[0] "Le champ sous-type de contact n'a pas été mis à jour pour un contact."
+msgstr[1] "Le champ sous-type de contact n'a pas été mis à jour pour %count contacts."
 
 #: CRM/Contact/Form/Task/Map.php
 msgid ""
@@ -25939,7 +25939,7 @@ msgstr "ID: %1"
 
 #: CRM/Core/BAO/Address.php
 msgid "You seem to have deleted the relationship type 'Household Member of'"
-msgstr ""
+msgstr "Il semble que vous ayez supprimé le type de relation \"Membre du foyer de\""
 
 #: CRM/Core/BAO/Navigation.php
 msgid "Log out"
@@ -25963,15 +25963,15 @@ msgstr "Type d'HTML du champ personnalisé"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Job Log ID"
-msgstr ""
+msgstr "Identifiant du journal de tâches"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Timestamp"
-msgstr ""
+msgstr "Horodate"
 
 #: CRM/Core/DAO/JobLog.php
 msgid "Extended Data"
-msgstr ""
+msgstr "Données Étendues"
 
 #: CRM/Core/DAO/RecurringEntity.php
 msgid "Parent ID"
@@ -26133,7 +26133,7 @@ msgstr "Répéter l'entité"
 
 #: CRM/Core/Payment/AuthorizeNetIPN.php
 msgid "Could not find contributionRecur id"
-msgstr ""
+msgstr "Impossible de trouver contributionRecur id"
 
 #: CRM/Core/Permission.php
 msgid "Create a new contact record in CiviCRM"
@@ -26294,11 +26294,11 @@ msgstr "modifier les modèles de message"
 
 #: CRM/Core/Permission.php
 msgid "view my invoices"
-msgstr ""
+msgstr "voir mes factures"
 
 #: CRM/Core/Permission.php
 msgid "Allow users to view/ download their own invoices"
-msgstr ""
+msgstr "Autoriser les utilisateurs à voir / télécharger leurs propres factures"
 
 #: CRM/Core/Resources.php
 msgid "Upcoming"
@@ -26377,21 +26377,21 @@ msgstr "Texte après le champ tarif"
 msgid ""
 "Cannot add or update profile field \"%1\" with combination of Household or "
 "Organization or any subtypes of Household or Organization."
-msgstr ""
+msgstr "Impossible d'ajouter ou de modifier le champ de profil « %1 » avec une combinaison de foyer, d'organisation ou de tout sous-type de foyer ou d'organisation."
 
 #: CRM/UF/Page/ProfileEditor.php
 msgid "Free HTML"
-msgstr ""
+msgstr "HTML Libre"
 
 #: CRM/UF/Page/ProfileEditor.php
 msgid "Formatting"
-msgstr ""
+msgstr "Formatage"
 
 #: CRM/Utils/Check/Security.php
 msgid ""
 "The system administrator has disabled security settings (%1). Connections to"
 " remote applications are insecure."
-msgstr ""
+msgstr "L'administrateur système a désactivé les paramètres de sécurité (%1). Les connections aux applications distantes ne sont pas sécurisées."
 
 #: CRM/Utils/DeprecatedUtils.php
 msgid "Event templates are not meant to be registered."
@@ -26432,7 +26432,7 @@ msgstr "Assurez-vous que vous êtes toujours connecté et que vous avez le droit
 
 #: js/crm.ajax.js
 msgid "Print window"
-msgstr ""
+msgstr "Imprimer la fenêtre"
 
 #: js/jquery/jquery.crmeditable.js packages/HTML/QuickForm/ckeditor.php
 #: packages/HTML/QuickForm/tinymce.php
@@ -26443,11 +26443,11 @@ msgstr "Cliquez pour modifier"
 
 #: js/model/crm.uf.js
 msgid "Markup"
-msgstr ""
+msgstr "Marquer"
 
 #: templates/CRM/Activity/Form/Activity.tpl
 msgid "Are you sure you want to delete "
-msgstr ""
+msgstr "Êtes-vous sûr de vouloir supprimer"
 
 #: templates/CRM/Activity/Form/ActivityLinks.tpl
 msgid "New Activity"
@@ -26474,13 +26474,13 @@ msgstr "Type de contact : %1"
 msgid ""
 "This smart group will stay up-to-date with all contacts who meet the search "
 "criteria."
-msgstr ""
+msgstr "Ce groupe dynamique va rester à jour avec tous les contacts qui corespondent aux critères de recherche."
 
 #: templates/CRM/Contact/Form/Task/SaveSearch.tpl
 msgid ""
 "NOTE: Even if only a few contacts have been selected from the search "
 "results, all contacts that meet the following criteria will be in the group."
-msgstr ""
+msgstr "NOTE : Même si seulement quelques contacts ont été sélectionnés, tous les contacts correspondants au critère suivant seront intégrés dans le groupe."
 
 #: templates/CRM/Contact/Import/Form/DataSource.hlp
 msgid ""
@@ -26608,7 +26608,7 @@ msgstr "Des participants sont inscrits à des événements récurrents qui seron
 
 #: templates/CRM/Core/Page/RecurringEntityPreview.tpl
 msgid "A repeating set will be created with the following dates."
-msgstr ""
+msgstr "Un ensemble répétitif sera créé avec les dates suivantes."
 
 #: templates/CRM/Core/Page/RecurringEntityPreview.tpl
 msgid "Start date"
@@ -26736,7 +26736,7 @@ msgid ""
 "you <a href=\"%1\" target=\"_blank\">support CiviCRM by becoming a "
 "member</a> or by <a href=\"%2\" target=\"_blank\">making a donation</a>. ~ "
 "Dave Greenberg, Co-Founder"
-msgstr ""
+msgstr "L'équipe principale de CiviCRM a travaillé dur et est fière de vous présenter la version 4.6, qui constitue la première mise à jour majeure de 2015. Si celle-ci apporte de nombreuses améliorations et continue à perfectionner le meilleur CRM en open source pour les organisations à but non lucratif du monde entier, sa production, son entretien et son optimisation ont un coût conséquent. Sans le financement des organisations comme la vôtre, les futures versions risquent de ne jamais voir le jour. Nous vous invitons à profiter des améliorations de la version 4.6 et vous demandons de <a href=\"%1\" target=\"_blank\">soutenir CiviCRM en vous inscrivant</a> ou en <a href=\"%1\" target=\"_blank\">faisant un don</a>. ~ Dave Greenberg, cofondateur."
 
 #: xml/templates/civicrm_data.tpl
 msgid "PCP owner notifications"
