po: update po/de_DE/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/common-base.po
+++ b/po/de_DE/common-base.po
@@ -47,7 +47,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 13:43+0000\n"
+"PO-Revision-Date: 2015-12-22 12:31+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -2260,7 +2260,7 @@ msgstr "Anzeige-Name"
 #: CRM/Contact/Form/Edit/Individual.php CRM/Contact/Form/Edit/Organization.php
 #: templates/CRM/Contact/Page/Inline/ContactInfo.tpl
 msgid "Nickname"
-msgstr "Spitzname"
+msgstr "Akronym"
 
 #: CRM/Contact/DAO/Contact.php CRM/Contact/Form/Edit/Organization.php
 #: templates/CRM/Contact/Page/Inline/ContactInfo.tpl
