po: update po/de_DE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -33,7 +33,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-21 11:05+0000\n"
+"PO-Revision-Date: 2015-12-22 12:31+0000\n"
 "Last-Translator: Fabian <schuttenberg@systopia.de>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -1322,7 +1322,7 @@ msgstr "E-Mail miteinbeziehen"
 
 #: CRM/Admin/Form/Setting/Search.php
 msgid "Include Nickname"
-msgstr "Spitznamen miteinbeziehen"
+msgstr "Akronym miteinbeziehen"
 
 #: CRM/Admin/Form/Setting/Search.php
 msgid "Include Alphabetical Pager"
@@ -3747,7 +3747,7 @@ msgstr "Wenn aktiviert, werden bei der Suche nach dem Namen automatisch die E-Ma
 #: templates/CRM/Admin/Form/Setting/Search.tpl
 msgid ""
 "If enabled, nicknames are automatically included when users search by Name."
-msgstr "Wenn aktiviert, werden Spitznamen automatisch bei der Suche miteinbezogen."
+msgstr "Wenn aktiviert, werden Akronyme automatisch bei der Suche miteinbezogen."
 
 #: templates/CRM/Admin/Form/Setting/Search.tpl
 msgid ""
